# frm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  ChangeLog.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  release.yaml
crates/frm-bin/: Cargo.toml  README.md
crates/frm-bin/shells/completion/bash/: frm.bash
crates/frm-bin/shells/completion/nu/: frm.nu
crates/frm-bin/shells/completion/zsh/: _frm
crates/frm-bin/shells/env/: zsh.template
crates/frm-bin/shells/init/: bash.template
crates/frm-bin/src/: cli.rs  download.rs  errors.rs  lib.rs  main.rs  paths.rs  releases.rs  shell.rs  tanzu.rs  timestamps.rs  version.rs  version_file.rs
crates/frm-bin/src/commands/: bg_start.rs  bg_stop.rs  check_signature.rs  clean.rs  cli_cmd.rs  completions.rs  conf.rs  cp_etc_file.rs  env.rs  erlang.rs  fg_node.rs  install.rs  list.rs  logs.rs  mod.rs  path.rs  prune.rs  reinstall.rs  status.rs  tanzu_install.rs  uninstall.rs  use_cmd.rs
crates/frm-bin/src/common/: cli_tools.rs  env_vars.rs  http.rs  mod.rs  urls.rs
crates/frm-bin/templates/etc/rabbitmq/: template.rabbitmq.conf
crates/frm-bin/templates/etc/rabbitmq/conf.d/: 90-logging.conf
crates/frm-bin/tests/: bg_tests.rs  check_signature_tests.rs  cli_tests.rs  config_tests.rs  cp_etc_file_proptests.rs  cp_etc_file_tests.rs  download_tests.rs  end_to_end_integration_tests.rs  erlang_tests.rs  errors_tests.rs  paths_proptests.rs  paths_tests.rs  releases_tests.rs  shell_completions_tests.rs  shell_tests.rs  status_proptests.rs  status_tests.rs  tanzu_cli_tests.rs  tanzu_proptests.rs  tanzu_tests.rs  version_option_proptests.rs  version_option_tests.rs  version_proptests.rs  version_tests.rs
crates/frm-bin/wix/: main.wxs
crates/rabbitmq-conf/: BNF.Grammar.md  Cargo.toml  README.md
crates/rabbitmq-conf/src/: conf.rs  errors.rs  keys.rs  lib.rs
crates/rabbitmq-conf/tests/: conf_proptests.rs  conf_tests.rs  keys_tests.rs  proptest_conf.rs
crates/rabbitmq-versioning/: Cargo.toml  README.md
crates/rabbitmq-versioning/src/: errors.rs  lib.rs  prerelease.rs  version.rs
crates/rabbitmq-versioning/tests/: version_proptests.rs  version_tests.rs
crates/tool-versions/: Cargo.toml  ChangeLog.md  README.md
crates/tool-versions/src/: errors.rs  lib.rs  tool_versions.rs
crates/tool-versions/tests/: serde_tests.rs  tool_versions_proptests.rs  tool_versions_tests.rs
scripts/: extract-changelog.nu  release-linux.nu  release-macos.nu  release-windows.nu
shells/env/: nu.template
shells/init/: nu.template  zsh.template
src/: cli.rs  config.rs  download.rs  errors.rs  lib.rs  main.rs  paths.rs  releases.rs  version.rs
src/commands/: clean.rs  cli_cmd.rs  completions.rs  default.rs  install.rs  list.rs  logs.rs  mod.rs  path.rs  prune.rs  reinstall.rs  show.rs  uninstall.rs  use_cmd.rs
templates/etc/rabbitmq/: template.rabbitmq.conf
tests/: cli_tests.rs  config_tests.rs  download_tests.rs  errors_tests.rs  paths_tests.rs  releases_tests.rs  shell_tests.rs  timestamps_tests.rs  version_file_tests.rs  version_proptests.rs  version_tests.rs
