[package]
name = "frm"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Frakking RabbitMQ version Manager"
repository = "https://github.com/michaelklishin/frm"
keywords = ["rabbitmq", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
bel7-cli = { version = "0.6", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
xz2 = "0.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
proptest = "1.6"
tempfile = "3.19"

[lints.clippy]
uninlined_format_args = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.ci]
inherits = "release"
opt-level = "s"
strip = true
