[workspace]
resolver = "3"
members = ["crates/frm-bin", "crates/rabbitmq-conf"]

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.ci]
inherits = "release"
opt-level = "s"
strip = true
