[workspace]
resolver = "3"
members = ["crates/frm-bin", "crates/rabbitmq-conf", "crates/rabbitmq-versioning"]

[workspace.package]
version = "0.16.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
authors = ["Michael S. Klishin and Contributors"]
repository = "https://github.com/michaelklishin/frm"
homepage = "https://github.com/michaelklishin/frm"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.ci]
inherits = "release"
opt-level = "s"
strip = true
