[package]
name = "frm-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Frakking RabbitMQ version Manager"
readme = "README.md"
keywords = ["rabbitmq", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "frm"
path = "src/lib.rs"

[[bin]]
name = "frm"
path = "src/main.rs"

[dependencies]
bel7-cli = { version = "0.9", features = ["full"] }
chrono = "0.4"
chrono-english = "0.1"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
flate2 = "1.1"
futures-util = "0.3"
indicatif = "0.18"
rabbitmq-conf = { path = "../rabbitmq-conf", version = "0.21" }
rabbitmq-versioning = { path = "../rabbitmq-versioning", version = "0.21" }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls", "charset", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }
toml = "1.1"
xz2 = "0.1"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
proptest = "1.11"
tempfile = "3.27"

[lints]
workspace = true
