[package]
name = "rabbitmq-conf"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Parser and manipulation library for RabbitMQ configuration files"
repository = "https://github.com/michaelklishin/frm"
keywords = ["rabbitmq", "configuration", "parser"]
categories = ["config", "parsing"]

[dependencies]
thiserror = "2.0"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.19"

[lints]
workspace = true
