[package]
name = "rabbitmq-conf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Parser and manipulation library for RabbitMQ configuration files"
readme = "README.md"
keywords = ["rabbitmq", "configuration", "parser"]
categories = ["config", "parsing"]

[dependencies]
thiserror = "2.0"
winnow = "0.7"

[dev-dependencies]
proptest = "1.9"
tempfile = "3.25"

[lints]
workspace = true
